Enhancments and restructuring

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -213,3 +213,14 @@
 	date = {2013-03-22},
 	url = {http://e-voting.bfh.ch/},
 }
+
+@book{book:hac,
+	author = {Menezes, Alfred J. and Vanstone, Scott A. and Oorschot, Paul C. Van},
+	title = {Handbook of Applied Cryptography},
+	year = {1996},
+	isbn = {0-8493-8523-7},
+	edition = {1st},
+	publisher = {CRC Press, Inc.},
+	address = {Boca Raton, FL, USA},
+	url = {http://cacr.uwaterloo.ca/hac},
+} 
