--- a/document.tex
+++ b/document.tex
@@ -31,6 +31,9 @@ footsepline, oneside, draft=off]{scrreprt}
 
 % activate the headings
 \pagestyle{headings}
+% make sure that the headings also appear on the first page of the chapter
+\renewcommand*{\chapterpagestyle}{headings}
+% change the font of the headings to smallcaps
 \setkomafont{pagehead}{\scshape}
 
 % UML stuff
@@ -42,6 +45,8 @@ footsepline, oneside, draft=off]{scrreprt}
 % Intelligent references
 \usepackage{varioref} 
 
+% Nomenclauture
+\usepackage{nomencl}
 
 % Draft watermark
 \usepackage[firstpage]{draftwatermark}
@@ -72,6 +77,9 @@ footsepline, oneside, draft=off]{scrreprt}
 %\newcommand{\myref}[1]{(see section \ref{#1} on page \pageref{#1})}
 \newcommand{\myref}[1]{(see \Vref{#1})}
 
+\usepackage[enabled]{easy-todo}
+
+
 \begin{document}
 
 \title{\bf Decentralized E-Voting on Android Devices Using Homomorphic Tallying}
@@ -90,6 +98,10 @@ Expert:\\
 Stephan Neumann, Technical University of Darmstadt}
 \maketitle
 
+\makenomenclature
+
+\clearpage
+\pagenumbering{roman}
 
 \begin{abstract}
 The E-Voting Group of the Bern University of Applied Sciences is planning to
@@ -110,28 +122,43 @@ use this e-voting system.
 \end{abstract}
 
 \tableofcontents
+\listoffigures
+\listoftables
+
+% Nomenclature 
+% ------------------------------------------------------------------
+\nomenclature{$p, q, g$}{The ElGamal parameters}
+\nomenclature{$m$}{A cleartext message}
+\nomenclature{$(a, b)$}{An ElGamal ciphertext tuple}
+\nomenclature{$x$}{An ElGamal private key}
+\nomenclature{$y$}{An ElGamal public key}
+
+
+\printnomenclature
+% ------------------------------------------------------------------
 
 \chapter{Introduction}
+\pagenumbering{arabic}
 \label{cha:introduction}
 The history of voting on a particular question in order determine the will of a
 group of people goes far back to the ancient Greeks, who laid the groundwork of
 today's democratic societies. Over the years, the purpose of holding elections
 remained the same, while the procedures on how this is done has changed
 significantly. The most ancient way of expressing the will by a hand sign has
-been replaced by modern technologies. The 20th century has
-seen a lot of changes in this area. Paper based voting has been introduced, and with the
-industrialization the first machines appeared which should help counting
-the votes appeared on the surface. In today's internet society where a lot of
-tasks such as banking, shopping, mailing, etc. has been revolutionized by the
-internet, it is not surprising that there are a lot of efforts going on to
-revolutionize the process of voting as well.
+been replaced by modern technologies. The 20th century has seen a lot of changes
+in this area. Paper based voting has been introduced, and with the
+industrialization, the first voting machines appeared the surface. The purpose
+of these machines was to simplify the counting process. In today's internet
+society where a lot of tasks such as banking, shopping, mailing, etc. has been
+revolutionized by the internet, it is not surprising that there are a lot of
+efforts going on to revolutionize the process of voting as well.
 
 One of the research fields of the Bern University of Applied Sciences is the
 area of e-voting. E-voting has become a big field of research in the past couple
 years. Still, there is no generic approach which meets all the criteria such as
-privacy, transparency, etc. which we want in e-voting. The e-voting research
-group of the Bern University of Applied Sciences \cite{www:EVG} tries to improve
-this situation with the following approaches:
+privacy, transparency, etc. which we want in e-voting. These properties are
+discussed in \Vref{sec:evoting}. The e-voting research group of the Bern
+University of Applied Sciences \cite{www:EVG} tries to improve this situation with the following approaches:
 \begin{itemize}
   \item Develop new approaches and provide them to the community for review.
   \item Take existing approaches and evaluate them in terms of practicability.
@@ -139,13 +166,14 @@ this situation with the following approaches:
 \end{itemize}
 
 The evaluation of these approaches is usually done by implementing them into a
-prototype level application to show that the approach actually works. The
-E-Voting Group would like to gain some experience on how decentralized e-voting
+prototype level application to show that the approach actually works and
+provides a certain usability.
+The E-Voting Group would like to gain some experience on how decentralized e-voting
 systems could be implemented and how they behave in practice. There are some
 approaches which focus explicitly on decentralized e-voting systems, such as the
-proposal of Khader et al. \cite{HKRS12}. In this project, we would like to adapt
-the protocol proposed by Cramer et. al. \cite{CGS97} in a way that it can be
-used as a decentralized e-voting system.
+proposal of Khader et al. \cite{HKRS12}. In this project however, we would like
+to adapt the voting scheme proposed by Cramer et. al. \cite{CGS97} in a way that
+it can be used as a decentralized e-voting system.
 
 A possible use case of such a system could be an executive board or any other
 committee that would like to vote on some matters without having their members
@@ -154,25 +182,11 @@ that all the participants are in a confined space and are able to exchange some
 sort of credential using a communication channel which relies on physical
 proximity (e.g. Near Field Communication) or visual contact (e.g. QR Codes).
 
-The goal of this project is to build systems which allows perform elections and
-polls on mobile Android devices under the following terms:
-\begin{itemize}
-  \item Voting needs to be done ad-hoc, meaning that no infrastructure other
-  than the participants' mobile devices are required to perform an election or
-  poll.
-  \item The voting scheme is based on the CGS97 approach proposed by Cramer et
-  al.~\cite{CGS97}.
-  \item It must be possible to perform elections or polls with the type \emph{one-out-of-n},
-  meaning the voter can choose exactly one option out of $n$ possible options.
-  It will not be possible to perform elections where multiple candidates can be
-  elected for example.
-\end{itemize}
-
 In previous projects during the master studies, some groundwork has been
 implemented which can now be used as a foundation for this project. The
 previously implemented projects are the following:
 \begin{itemize}
-  \item \textbf{UniCrypt:} Unicrypt is a cryptographic library developed by the
+  \item \textbf{UniCrypt:} UniCrypt is a cryptographic library developed by the
   members of the E-Voting Group of the Bern University of Applied Sciences. It
   provides cryptographic building blocks such as the ElGamal cryptosystem, zero
   knowledge proofs, digital signatures, etc. 
@@ -180,114 +194,84 @@ previously implemented projects are the following:
   communication platform for Android devices. It allows to exchange messages
   using Wi-Fi among a closed user group.
 \end{itemize}
-The projects mentioned above will be discussed in more detail in the Chapter
-``Background and Related Work'' \myref{cha:brw}.
+The projects mentioned above will be discussed in more detail in \Vref{cha:brw}.
 
-The time budget of this master thesis is one year, although the project will be
-implemented part time. It is equivalent to 27 ECTS credits.
-\Vref{cha:expectedresults} gives a more in-depth specification about the results which are expected at the end of this master thesis.
-
-\section{Contribution and Goals}
-\label{cha:contributiongoals}
+\section{Goals}
+\label{cha:goals}
 The final result of this project is a fully-fledged decentralized e-voting
 application which runs on Android devices and does not require any equipment
-other than the Android smartphones or tablets. Since a considerable amount of
-people carry such devices, which allows setting up spontaneous polls. The
-implementation can be split up in several packages, which are shortly explained
-in the following Section.
+other than the Android smartphones or tablets. The CGS97 \cite{CGS97} will be
+used as the theoretical foundation for this project. Having said this, we divide
+the following goals for this project:
+\paragraph{E-Voting Functionality.}
+The main challenge of this project is the implementation of the logic of CGS97
+\cite{CGS97}, by assembling the cryptographic building blocks to a working
+application. It has to be tied to the user interface and to InstaCircle for
+communicating with the other participants. This part is heavily based on already
+existing components, namely InstaCircle which provides the decentralized
+communication infrastructure and UniCrypt which provides the implementation of
+the cryptographic building blocks which are used in CGS97
+\myref{sec:buildingblocks}. The final product needs to be able to handle a
+voting scenario \emph{one-out-of-n}, meaning that a user can choose exactly one
+option out of $n$ options. This allows to set up polls which are more complex
+than a simple \emph{Yes-No} poll. At the other end of the spectrum would be the
+\emph{m-out-of-n} scenario, that means that $m$ options can be picked out of $n$
+options. The \emph{m-out-of-n} scenario is not a must for this project.
 
-\subsection{Implementation of a Threshold Secret Sharing scheme in UniCrypt}
-\label{sec:thresholdsecretsharing}
-In order to ensure privacy of the ballots, the CGS97 \cite{CGS97} e-voting
-protocol uses a threshold secret sharing mechanism which splits up the secret
-key which will later be used for decrypting the result among an certain number
-of trustees. Since the protocol allows participants to impersonate multiple
-rules, all participants could also be trustees. In the scenario of an ad-hoc
-e-voting setup, it certainly makes sense to assign the role of the trustee to
-all participants. This is because of the following reasons:
+\paragraph{Extension of UniCrypt.}
+UniCrypt implements many cryptographic building blocks which are necessary in
+order to implement a CGS97 based e-voting system, however two crucial parts are
+missing:
 \begin{itemize}
-  \item In many cases, the number of participants in an ad-hoc poll can be so
-  small that it would be hard to find an even smaller subset of participants
-  which will act as trustees.
-  \item In classical large-scale elections or polls, the role of the trustee
-  will probably be assigned to organizations such as political parties,
-  governmental authorities, election observation organizations, etc. In
-  spontaneous ad-hoc polls, the question of who gets to be a trustee is not an
-  obvious one, so it is probably the best choice to assign this role to all
-  participants.
-  \item Assigning the role of a trustee to all participants other than just to a
-  subset of participants means that the handling of the application would be the
-  same for all the participants (except for one special participant who defines
-  the question and the allowed options of the poll). That simplifies the design
-  of the user interface and avoids confusion about who has to do what during the
-  poll.
+  \item \textbf{Proof of Validity:} This type of zero-knowledge proof is used in
+  order to make sure that a ciphertext is an encryption of an element which
+  belongs to a set of possible plaintexts. This type of proof is an instace of
+  of a more generic \emph{OR-composition} of multiple proofs of knowledge. This
+  type of zero-knowledge proof is discussed in detail in
+  \Vref{sec:zeroknowledgeproofs}.
+  \item \textbf{Threshold Cryptosystem:} In order to ensure privacy of
+  the ballots, the CGS97 e-voting scheme uses a so called threshold system. This
+  system allows to split a secret key and distribute \emph{key shares} to a
+  given set of participants. In order to decrypt a ciphertext, the parties have
+  to collaborate in order to reconstruct the secret key. Threshold cryptosystems
+  are discussed in further detail in \Vref{sec:secretsharing}.
 \end{itemize}
 
-The CGS97 protocol suggests to use threshold secret sharing scheme due to Torben
-Pryds Pedersen \cite{PED91}, which adds a distributed key generation mechanism to the
-scheme proposed by Adi Shamir \cite{Shamir79}. 
+As a goal of this project, these two essential building blocks have to be
+implemented and integrated into the UniCrypt library.
 
-We are considering replacing the secret sharing scheme with a variant that
-requires less steps during the distributed key generation phase. So far this
-scheme was only subject to some discussions and has to be analyzed and specified
-in more detail. This work is also done as a part of this master thesis.
-
-There is currently no threshold secret sharing mechanism implemented in
-UniCrypt. The implementation such a mechanism in InstaCircle is a goal
-for this project.
-
-
-\subsection{Implementation of a Proof of Validity in UniCrypt}
-\label{sec:proofofvalidity}
-In \Vref{sec:zeroknowledgeproofs} we have seen three types of zero-knowledge
-proofs which are required as a building block of CGS97. The InstaCircle library
-currently implements two types, namely the proof of knowledge of discrete
-logarithm and the proof of equality of discrete logarithm. What's currently
-missing is the proof of validity, which allows to create a proof proving that
-a given image of a homomorphic one-way function corresponds to a preimage which
-belongs to a given set of allowed preimages. 
-
-\subsection{Graphical User Interface}
-\label{sec:gui}
+\paragraph{Graphical User Interface.}
 In many cases, cryptographic functions which are heavily used in the context of
 e-voting have a negative impact on the usability. Many steps such as key
 generation, decryption, etc. have to be done in order to guarantee a poll which
 can't be compromised, and these steps bring a certain complexity into the
 handling of the application. Therefore it is crucial to guide the user
 through the process, and this can only be done by providing them a carefully
-crafted user interface. We can divide the required user interface into the
-following components:
-\begin{itemize}
-  \item \textbf{Administration:} The very first step in a poll would be to
-  define the question of the poll and the allowed options. Also, some sort of
-  access credential has to be defined. This step has to be performed by one
-  special participant, let's define this special participant as the
-  \textit{initiator} of the poll. Functionality in order to open and close the
-  voting period is also necessary in this part.
-  \item \textbf{Voting:} One part of the interface has to deal with the
-  functionality of casting a vote. It basically displays the question of the
-  poll and provides functionality to choose one of the available options.
-  \item \textbf{Bulletin board:} One building block of the CGS97 protocol
-  \cite{CGS97} is the so called bulletin board where the whole transcript of
-  messages between the participants is saved. All these information needs to be displayed on the
-  user interface so that the participant has the possibility to verify the
-  validity of the whole e-voting process \myref{sec:bulletinboard}.
-\end{itemize}
+crafted user interface. A further goal of this project is to implement a user
+interface which provides a good usability.
+\\
 
-\subsection{E-Voting Functionality}
-\label{sec:evotingfunctionality}
-The main challenge of this project is the implementation of the logic of CGS97 
-\cite{CGS97}, namely assemble the cryptographic building blocks to a working
-application and tie it to the user interface and to InstaCircle for communicating to the other
-participants. This part is heavily based on already existing components, namely
-InstaCircle which provides the decentralized communication infrastructure and
-UniCrypt which provides the implementation of the cryptographic building blocks
-which are used in CGS97 \myref{sec:buildingblocks}. The final product needs to
-be able to handle a voting scenario \emph{one-out-of-n}, meaning that a user can
-choose exactly one option out of $n$ options. This allows to set up polls which are more
-complex than a simple \emph{Yes-No} poll. At the other end of the spectrum would
-be the \emph{m-out-of-n} scenario, that means that $m$ options can be picked out
-of $n$ options. The \emph{m-out-of-n} scenario is not a must for this project.
+The time budget of this master thesis is one year, although the project will be
+implemented part time. It is equivalent to 27 ECTS credits.
+
+\section{Contribution}
+\label{sec:contribution}
+Currently there are a couple of Android apps available in the Google Play store
+which allow to do simple polls, or else they are clients of e-voting systems of
+a specific organisation. A decentralized e-voting system which offers the
+cryptographic level of this project is currently not available. The
+implementation and the evaluation of this project will help to understand
+further strong and weak points of the CGS97 e-voting scheme, especially when
+using it in decentralized configuration. So far, the E-Voting Group of the Bern
+University of Applied Sciences has gained expertise by implementing and
+operating e-voting systems on centralized systems which are usually operated on
+notebooks or desktop computers. This project will help gaining some experience
+in how e-voting systems can be used on mobile devices.
+
+Furthermore, the extensions for the UniCrypt library can be used for other
+projects as well. In the area of e-voting, threshold cryptosystems and validity
+proofs are considered as standard building blocks and can be used for the
+implementation of e-voting schemes other than CGS97.
 
 \section{Outline}
 \Vref{cha:brw} gives an overview of the work on which this project has
@@ -295,6 +279,8 @@ been based on. The cryptographic building blocks which are used are discussed,
 as well as the e-voting scheme on which this work is based on. We also discuss
 projects which have been implemented as a preparation of this master thesis.
 \Vref{cha:results} explains the resulting implementation in detail.
+
+\todo{Needs to be extended with results, discussion and conclusion}
 
 \chapter{Background and Related Work}
 \label{cha:brw}
@@ -517,6 +503,7 @@ Knowledge Proofs are used to make sure that none of the participants are
 cheating.
 
 \subsubsection{Non-interactive zero-knowledge proofs}
+\label{sec:nizkp}
 Zero-knowledge proofs as described above are \textit{interactive} conversations
 between a prover and a verifier. This also means that the prover proofs only to
 the verifier that she has knowledge of the secret. Of course, any observer could
@@ -564,6 +551,7 @@ condition holds:
  explained and we also make the adaption of the schema above.
  
 \subsubsection{Proving the Knowledge of Discrete Logarithm}
+\label{sec:proofknowledgedlog}
 This type of Proof was first presented by Claus Peter Schnorr in 1991
 \cite{Schnorr91}. We have seen that the ElGamal encryption function has the
 homomorphic property \myref{sec:homenc}. Therefore, it is possible to prove the
@@ -606,6 +594,7 @@ $c=H(a||t)$ and check whether the following condition holds:
 \end{equation}
 
 \subsubsection{Proving the Equality of Discrete Logarithms}
+\label{sec:proofeqdlog}
 This type of proof due to David Chaum and Torben Pryds Pedersen \cite{CP93}
 that proofs the relation $log_{g_1} c_1 = log_{g_2} c_2 $ for two values $c_1 =
 g_1^m$ and $c_2 = g_2^m$, where $g_1$ and $g_2$ are generators of the
@@ -638,6 +627,7 @@ $c=H(c_1||c_2||t)$ and check whether the following condition holds:
 
 
 \subsubsection{Proving Validity}
+\label{sec:proofofvalidity}
 Proofs of validity are used to prove that a certain image of a homomorphic one
 way function is in fact the image of a preimage and the preimage is an element
 of a set of possible preimages. The proof however does not reveal which preimage
@@ -837,7 +827,7 @@ upcoming election.
 
 \paragraph{Key Generation Phase.}
 All the trustees execute a robust threshold key generation protocol as discussed
-in \Vref{sec:thresholdsecretsharing}. At this stage, a \emph{threshold}
+in \Vref{sec:secretsharing}. At this stage, a \emph{threshold}
 $t\leq|T|$ must be defined. This parameter defines the minimal number of
 trustees which are required to decrypt the final result in the tallying phase.
 The transcript of the key generation protocol is posted on the bulletin board
@@ -1048,16 +1038,18 @@ throughout the project period.
 
 \chapter{Results}
 \label{cha:results}
-This chapter will be written in a later phase of the project.
+\todo{This chapter will be written in a later phase of the project}
 
 \chapter{Discussion}
 \label{cha:discussion}
-This chapter will be written in a later phase of the project.
+\todo{This chapter will be written in a later phase of the project}
 
 \chapter{Conclusion}
 \label{cha:conclusion}
-This chapter will be written in a later phase of the project.
+\todo{This chapter will be written in a later phase of the project}
 
 \printbibliography
+
+\listoftodos
 
 \end{document}
