Refactoring, discrete logarithm problem

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -178,6 +178,25 @@
 	issn = {0018-9448},
 }
 
+@article{RSA78,
+ author = {Rivest, Ronald L. and Shamir, Adi and Adleman, Leonard},
+ title = {A method for obtaining digital signatures and public-key cryptosystems},
+ journal = {Commun. ACM},
+ issue_date = {Feb. 1978},
+ volume = {21},
+ number = {2},
+ month = feb,
+ year = {1978},
+ issn = {0001-0782},
+ pages = {120--126},
+ numpages = {7},
+ url = {http://doi.acm.org/10.1145/359340.359342},
+ doi = {10.1145/359340.359342},
+ acmid = {359342},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {authentication, cryptography, digital signatures, electronic funds transfer, electronic mail, factorization, message-passing, prime number, privacy, public-key cryptosystems, security},
+} 
 
 @techreport{ritter13a,
      title = {InstaCircle -- A Location-Bound Ad-Hoc Network for Android Devices},
